--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ shape_registration/devel/
 shape_registration/build/
 
 dataset/
+src/
+
+.catkin_workspace
 
 #imfuison_part
 /home/zhongliang/ros/nehil/markerless_motion_capture_for_RUSS/ROS_VisionControl/devel/
